--- a/Profile Site home.css
+++ b/Profile Site home.css
@@ -6,15 +6,19 @@
         -moz-transition: opacity 2s ease-in;
         -ms-transition: opacity 2s ease-in;
         -o-transition: opacity 2s ease-in;
-        background: #C0C0C0 !important;
+        background-image: url("2018-02-23 07.43.42-2.jpg");
     }
-    .header {
+    header {
         width: 100%;
-        height: 300px;
-        margin-bottom: 15px;
+        text-align: center;
     }
     h1 {
-        display: inline-block;
+        margin: auto;
+    }
+    img {
+         width: 70%;
+        height: 150px;
+        border-radius: 50%;
     }
     p {
         display: inline-block;
