--- a/websites.css
+++ b/websites.css
@@ -1,6 +1,4 @@
-html, body, nav {
- height: 100%;
- }
+
 body {
     background-image: url("2018-02-23 07.43.42-2.jpg");
 }
@@ -21,21 +19,19 @@ i:hover {
     border: 10px solid white;
     color: white;
 }
-/* CSS used here will be applied after bootstrap.css */
-.navbar-fixed-left {
-  width: 140px;
-  position: fixed;
-  border-radius: 0;
-  height: 100%;}
-
-.navbar-fixed-left .navbar-nav > li {
-  float: none;  /* Cancel default li float: left */
-  width: 139px;
+h1, .languages{
+    font-size: 2rem;
+    text-align: center;
+    color: white !important;
 }
 img {
-    width: 95%;
-    height: 100px;
-    margin: 10px 0; 
-    border-radius: 50%;
+    width: 45%;
+    height: 125px;
+    margin-top: 10px;
+}
+section {
+    background: rgba(0,0,0,.5);
+    padding: 10px;
+    margin: 15px;
 }
 
