--- a/personal.css
+++ b/personal.css
@@ -1,3 +1,19 @@
+i {
+    background: white;
+    padding: 10px;
+    width: 90%;
+    text-align: center;
+    border: 10px solid black;
+    color: black;
+    font-size: 20px;
+}
+
+i:hover {
+    opacity: .5;
+    background: black;
+    border: 10px solid white;
+    color: white;
+}
 *,
 *::before,
 *::after {
@@ -9,6 +25,7 @@
 body {
   color: white;
   background-image: url(2018-02-23%2007.43.42-2.jpg);
+  background-size: cover;
   overflow-x: hidden;
   padding-bottom: 50px;
 } 
@@ -19,6 +36,8 @@ body {
 
 .timeline ul {
   padding: 50px 0;
+  color: white;
+  font-size: 2rem;
 }
 
 .timeline ul li {
@@ -81,10 +100,11 @@ body {
 
 time {
   display: block;
-  font-size: 1.2rem;
+  font-size: 2.2rem;
   font-weight: bold;
   margin-bottom: 8px;
 }
+
 
 
 /* EFFECTS
