--- a/CSS/personal.css
+++ b/CSS/personal.css
@@ -24,7 +24,7 @@ i:hover {
 
 body {
   color: white;
-  background-image: url(2018-02-23%2007.43.42-2.jpg);
+  background-image: url('../Media/IMG/2018-02-23%2007.43.42-2.jpg');
   background-size: cover;
   overflow-x: hidden;
   padding-bottom: 50px;
