--- a/CSS/skills.css
+++ b/CSS/skills.css
@@ -1,6 +1,6 @@
 
 body {
-    background-image: url("2018-02-23 07.43.42-2.jpg");
+    background-image: url('../Media/IMG/2018-02-23%2007.43.42-2.jpg');
 
 }
 button {
