--- a/CSS/videos.css
+++ b/CSS/videos.css
@@ -36,3 +36,20 @@ i:hover {
 p {
     font-size: 2rem;
 }
+iframe {
+    width: 100%;
+    height: 350px;
+    padding: 15px;
+    border: none;
+}
+.Hamilton {
+     width: 30%;
+    height: 150px;
+    display: inline-block;
+    margin: 15px 5px;
+}
+.cover{
+    width: 100%;
+    height: 350px;
+    padding: 15px;
+}
