--- a/CSS/personal.css
+++ b/CSS/personal.css
@@ -98,7 +98,7 @@ body {
   border-color: transparent transparent transparent rgba(0,0,0,.5);
 }
 
-time {
+h2 {
   display: block;
   font-size: 2.2rem;
   font-weight: bold;
